# Personal-Wellness-Tracker-App

./: Jenkinsfile  Project-Documentation.md
personal_wellness_tracker/: README.md  SQLITE_INTEGRATION_SUMMARY.md  USER_GUIDE_THAI.md  firebase.json  pubspec.yaml  upload_thai_food.dart
personal_wellness_tracker/android/app/: build.gradle.kts  google-services.json
personal_wellness_tracker/ios/Runner/: Info.plist
personal_wellness_tracker/ios/Runner.xcodeproj/: project.pbxproj
personal_wellness_tracker/lib/: firebase_options.dart  main.dart
personal_wellness_tracker/lib/Dialog/: activityDialog.dart  dialogMood.dart  sleepDialog.dart
personal_wellness_tracker/lib/app/: achievement_service.dart  daily_task_api.dart  database_service.dart  firestore_service.dart  notification_service.dart
personal_wellness_tracker/lib/config/: api_config.dart
personal_wellness_tracker/lib/models/: achievement.dart
personal_wellness_tracker/lib/pages/: Onboarding.dart  all_logs_page.dart  auth_layout.dart  daily_page.dart  dashboard.dart  food_save.dart  home.dart  login.dart  login_page.dart  mock_api_manager_page.dart  myProfile_page.dart  profile.dart  profile_widget.dart  progress_page.dart  register_page.dart  setting_page.dart  splash_screen.dart  statistics_page.dart  welcome_page.dart
personal_wellness_tracker/lib/providers/: user_provider.dart
personal_wellness_tracker/lib/services/: achievement_service.dart  api_service.dart  auth_service.dart  data_export_service.dart  notification_service.dart  nutrition_service.dart  nutrition_service_clean.dart  offline_data_service.dart  sync_service.dart
personal_wellness_tracker/lib/widgets/: nutrition_chart.dart
personal_wellness_tracker/lib/์NavigationBar/: main_scaffold.dart
personal_wellness_tracker/linux/: CMakeLists.txt
personal_wellness_tracker/linux/runner/: my_application.cc
personal_wellness_tracker/macos/Flutter/: GeneratedPluginRegistrant.swift
personal_wellness_tracker/test/: widget_test.dart
personal_wellness_tracker/web/: index.html  manifest.json
personal_wellness_tracker/windows/: CMakeLists.txt
personal_wellness_tracker_backend/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  run.py  setup_database.py  wellness_tracker.db
personal_wellness_tracker_backend/personal_wellness_tracker_backend/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
personal_wellness_tracker_backend/personal_wellness_tracker_backend/api/: auth.py
personal_wellness_tracker_backend/personal_wellness_tracker_backend/core/: config.py  deps.py  deps_new.py  security.py
(+8 files in other folders)
